# rust_study

./: .gitignore  Cargo.toml  Day2_expanded.md  Introchat.md  README.md  full Chat GPT log.txt  zero_cost_demo.rs
.github/: copilot-instructions.md
Brackets_Basic/: Cargo.toml  Q and A.md  README_BASIC.md  RUST_DOCUMENTATION_STANDARDS.md  RUST_TEST_DOCUMENTATION_STANDARDS.md
Brackets_Basic/examples/: advanced_demo.rs  algorithm_analysis.rs  documentation_example.rs  documentation_standards.rs  simple_demo.rs  test_documentation_standards.rs  warning.txt
Brackets_Basic/src/: brackets.rs  lib.rs
Brackets_Basic/tests/: brackets_checker_test.rs  utf8_test.rs
Brackets_Ext/: API_DOCUMENTATION.md  BRACKETS_EXTENDED_WALKTHROUGH.md  Cargo.toml  Copilot_chat.md  DOCUMENTATION_IMPROVEMENTS.md  README.md  README_EXTENDED.md  full Chat GPT log.txt
Brackets_Ext/src/: lib.rs  (+2 more)
Demos/: benchmark_zero_cost.rs
Mission1/: Cargo.toml  Chat.md  KEY_TAKEAWAYS.md  LEARNING_JOURNEY.md  QUICK_REFERENCE.md  SIMPLE_GUIDE.md  readme.md
Mission2/: ALTERNATIVE_COMPARISON.md  Cargo.toml  Code_Review_Q_A.md  IMPLEMENTATION_SUMMARY.md  Notes.md  README.md  auoogen_instructs.md  new_chat,md
Mission2/examples/: overwrite_demo.rs
Mission2/src/: lib.rs  main.rs  queue.rs  queue_alt.rs
Mission2/tests/: queue_alt_test.rs  queue_test.rs
aoc_scaffold_templates_with_tests/: Cargo.toml
rust_learning_week1_notes/: Day1.md  Day2.md  Day2_expanded.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md
rust_learning_week2_notes/: Day10.md  Day11.md  Day12.md  Day13.md  Day14.md  Day8.md  Day9.md
(+49 files in other folders)
