[package]
name = "mission2"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Mission 2: FIFO Queue implementations (Ring Buffer + Linked Queue) with V-Cycle development"
keywords = ["queue", "fifo", "ring-buffer", "linked-list", "data-structures"]
categories = ["data-structures", "algorithms"]
license = "MIT OR Apache-2.0"

[lib]
name = "mission2"
path = "src/lib.rs"

[[bin]]
name = "mission2_demo"
path = "src/main.rs"

[dependencies]

[dev-dependencies]